--- a/components/components/buttons.twig
+++ b/components/components/buttons.twig
@@ -1,4 +1,4 @@
-<button class="ids-radius--8 ids-fs--18 ids-color--red-50">Button</button>
+<button class="ids-radius--8 ids-fs--18">Button</button>
 
 <hr />
 {# Icon button #}   
@@ -9,5 +9,5 @@
 <hr />
 {# Disabled button #}   
 <button class="disabled" aria-label="Disabled button" disabled>
-    <span class="material-symbols-outlined">favorite</span>
+    Disabled button
 </button>
